exports[`<TitleOnShadow /> renders correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      0,
      3422552064,
    ]
  }
  end={undefined}
  locations={null}
  start={undefined}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 24,
      "position": "absolute",
      "right": 0,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "rgba(255, 255, 255, 1)",
        },
        Object {
          "fontSize": 24,
        },
      ]
    }>
    Foo
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "rgba(255, 255, 255, 1)",
        },
        Object {
          "fontSize": 14,
        },
      ]
    }>
    bar
  </Text>
</BVLinearGradient>
`;

exports[`<TitleOnShadow /> renders correctly without subtitle 1`] = `
<BVLinearGradient
  colors={
    Array [
      0,
      3422552064,
    ]
  }
  end={undefined}
  locations={null}
  start={undefined}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 24,
      "position": "absolute",
      "right": 0,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "rgba(255, 255, 255, 1)",
        },
        Object {
          "fontSize": 24,
        },
      ]
    }>
    Foo
  </Text>
</BVLinearGradient>
`;
